<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreenActivity">

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no"
        android:hint="@string/email_edittext_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:importantForAutofill="no"
        android:hint="@string/password_edittext_hint"
        app:layout_constraintLeft_toLeftOf="@id/emailEditText"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"/>

    <CheckBox
        android:id="@+id/saveInfoCheckBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Save login information"
        android:textSize="13dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".5"
        app:layout_constraintLeft_toLeftOf="@+id/passwordEditText"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_button_hint"
        android:onClick="onLoginPress"
        app:layout_constraintLeft_toLeftOf="@id/saveInfoCheckBox"
        app:layout_constraintTop_toBottomOf="@id/saveInfoCheckBox"/>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_button_hint"
        android:onClick="onRegisterPress"
        app:layout_constraintLeft_toLeftOf="@id/loginButton"
        app:layout_constraintTop_toBottomOf="@id/loginButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>